Fixed text-overflow by adding max-width

--- a/src/stylesheets/slidedown.scss
+++ b/src/stylesheets/slidedown.scss
@@ -109,6 +109,7 @@ $border-radius: 0.5em;
       overflow: hidden;
       text-overflow: ellipsis;
       display: block;
+      max-width: 10em;
     }
 
     .onesignal-checkmark {
